fix: lightbox issue with alignment control

--- a/assets/scss/components/main/_gutenberg.scss
+++ b/assets/scss/components/main/_gutenberg.scss
@@ -151,3 +151,15 @@ blockquote {
 	}
 }
 
+.wp-lightbox-overlay {
+
+	figure {
+
+		img {
+			height: var(--wp--lightbox-image-height);
+			min-height: var(--wp--lightbox-image-height);
+			min-width: var(--wp--lightbox-image-width);
+			width: var(--wp--lightbox-image-width);
+		}
+	}
+}
